test/spec_vectors/i32/fail/module_27.wat
(module (func $type-binary-1st-operand-empty-in-else (i32.const 0) (i32.const 0) (i32.const 0) (if (result i32) (then (i32.const 0)) (else (i32.add) (i32.const 0))) (drop) (drop)))